[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
edition = "2021"
version = "2.0.0"
authors = ["ZMANN <info@zmann.org>"]
license = "GPL-3.0-or-later"
homepage = "https://zmann.org"

[workspace.dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
rkyv = "0.7.45"
zstd = "0.13.0"
strum = { version = "0.27", features = ["derive"] }

common = { path = "crates/common" }
fx = { path = "crates/fx" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
