[workspace]
resolver = "2"
members = ["ci", "crates/*", "xtask"]

[workspace.package]
edition = "2021"
version = "2.0.0"
authors = ["ZMANN <info@zmann.org>"]
license = "GPL-3.0-or-later"
homepage = "https://zmann.org"

[workspace.dependencies]
common = { path = "crates/common" }
fx = { path = "crates/fx" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git" }
rkyv = "=0.7.45"
strum = { version = "0.27", features = ["derive"] }
zstd = "0.13.3"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
