[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
edition = "2021"
version = "2.0.0"
authors = ["ZMANN <info@zmann.org>"]
license = "GPL-3.0-or-later"
homepage = "https://zmann.org"

[workspace.dependencies]
common = { path = "crates/common" }
config = { path = "crates/config" }
engine = { path = "crates/engine" }
fx = { path = "crates/fx" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git" }
rkyv = "=0.7.45"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
toml = "0.9.8"
zstd = "0.13.3"

[patch."https://github.com/robbert-vdh/vst3-sys.git"]
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys", optional = true }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
