[package]
name = "bells"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { workspace = true }
engine = { workspace = true }
fx = { workspace = true }
nih_plug = { workspace = true }
rkyv = { workspace = true }
rustc-hash = "2.0.0"
strum = { workspace = true }
zstd = { workspace = true }
