[package]
name = "orchestron"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
build_function = { path = "../build_function" }

[dependencies]
nih_plug = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
dasp = { version = "0.11", features = [
    "signal",
    "interpolate-linear",
    "interpolate",
] }
instrument = { path = "../instrument" }
nih_plug_webview = { path = "../nih_plug_webview" }
strum = { workspace = true }
