[package]
name = "orchestron"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { workspace = true }
fx = { workspace = true }
common = { workspace = true }
rkyv = { workspace = true }
zstd = { workspace = true }
strum = { workspace = true }

dasp = { version = "0.11", features = [
    "signal",
    "interpolate-linear",
    "interpolate",
] }