[package]
name = "toybox_c1200"
version = "0.0.0"
edition = "2021"
authors = ["ZMANN <info@example.com>"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_webview = { workspace = true }
include_dir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wavekit = { path = "../wavekit" }
instrument = { path = "../instrument" }
fx = { path = "../fx" }
strum = { version = "0.26", features = ["derive"] }
rust-embed = { version = "8.2.0", features = ["interpolate-folder-path"] }
