[package]
name = "toybox_c1200"
authors = ["ZMANN <info@example.com>"]
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { workspace = true }
nih_plug_webview = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
wavekit = { path = "../wavekit" }
instrument = { path = "../instrument" }
fx = { path = "../fx" }
strum = { workspace = true }
