[package]
name = "toybox_c1200"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
build_function = { path = "../build_function" }

[dependencies]
nih_plug = { workspace = true }
nih_plug_webview = { path = "../nih_plug_webview" }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
wavekit = { path = "../wavekit" }
instrument = { path = "../instrument" }
fx = { path = "../fx" }
strum = { workspace = true }
